# Plataforma-de-Dados-do-Observat-rio-do-Turismo-do-Sul-de-Minas-Gerais

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
otsuldeminas/: manage.py
otsuldeminas/api/: serializers.py  services.py  urls.py  utils.py  views.py
otsuldeminas/arquivos_cidades_cnaes/: cnae.csv  municipios_sul_mg.csv
otsuldeminas/cadastros/: admin.py  models.py
otsuldeminas/cadastros/migrations/: 0001_initial.py
otsuldeminas/caged/: admin.py  apps.py  models.py
otsuldeminas/caged/migrations/: 0001_initial.py  0002_remove_caged_caged_caged_municip_8a5c0e_idx_and_more.py  0003_alter_caged_saldo_caged.py  0004_rename_caged_saldomensalcaged_and_more.py
otsuldeminas/etl/: admin.py  apps.py  consts.py  models.py  tasks.py
otsuldeminas/etl/migrations/: 0001_initial.py  0002_arquivocoletado_ano_arquivocoletado_mes.py  0003_alter_arquivocoletado_ano_alter_arquivocoletado_mes.py  0004_rename_path_arquivocoletado_path_extraido_and_more.py  0005_municipioalvo.py  0006_rename_municipioalvo_municipio_and_more.py  0007_cnae.py  0008_estabelecimento.py  0009_alter_estabelecimento_cep_and_more.py  0010_alter_estabelecimento_codigo_municipio_rf.py  0011_remove_estabelecimento_classe_cnae_and_more.py
otsuldeminas/etl/services/: caged.py  rais.py  receita_federal.py
otsuldeminas/otsuldeminas/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
otsuldeminas/rais/: admin.py  apps.py  models.py  tasks.py
otsuldeminas/rais/migrations/: 0001_initial.py  (+6 more)
otsuldeminas/receita_federal/: admin.py  apps.py  models.py
(+8 files in other folders)
