[project]
name = "otsuldeminas3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "celery>=5.5.3",
    "dj-database-url>=3.0.1",
    "django>=5.2.5",
    "djangorestframework>=3.16.1",
    "httpx[http2]>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.4",
    "unidecode>=1.4.0",
    "gevent>=24.2.1",
    "rich-progress>=0.4.0",
    "pandas>=2.3.2",
    "py7zr>=1.0.0",
    "pydantic>=2.11.9",
    "jupyter>=1.1.1",
    "django-extensions>=3.2,<4",
    "ipython<9",
    "notebook<7",
    "ipykernel>=6,<7",
    "jupyterlab>=4",
    "nbclassic<1.1",
    "traitlets<5.14",
    "jupyter-client<8",
    "jupyter-core<6",
    "tornado<6.4",
    "markdown>=3.9",
    "django-filter>=25.1",
    "django-celery-beat>=2.8.1",
    "django-celery-results>=2.6.0",
    "charset-normalizer>=3.4.3",
]
